log
Fri Apr  8 15:13:22 UTC 2022: 
 tests:  0|6
total_score: 0/70
d73e751
Fri Apr  8 15:28:52 UTC 2022: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:3: error: ‘Ncap’ undeclared (first use in this function); did you mean ‘bcmp’?
   Ncap=capacity;
   ^~~~
   bcmp
hashmap.c:55:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:58:8: error: ‘HashMap {aka struct HashMap}’ has no member named ‘capcity’; did you mean ‘capacity’?
   aux->capcity=Ncap;
        ^~~~~~~
        capacity
Compilation failed
186b325
Fri Apr  8 15:29:01 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:3: error: ‘Ncap’ undeclared (first use in this function); did you mean ‘bcmp’?
   Ncap=capacity;
   ^~~~
   bcmp
hashmap.c:55:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
156f0ee
Fri Apr  8 15:29:11 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
234f6c9
Fri Apr  8 15:37:42 UTC 2022: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:12: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
   if (map->bucket==NULL){
            ^~~~~~
            buckets
hashmap.c:45:10: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
     map->bucket[pos]=value;
          ^~~~~~
          buckets
hashmap.c:51:16: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
     while(map->bucket!=NULL){
                ^~~~~~
                buckets
hashmap.c:53:12: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
       map->bucket[pos]=value;
            ^~~~~~
            buckets
Compilation failed
3ec2afa
Fri Apr  8 15:37:59 UTC 2022: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
2c6d225
Fri Apr  8 15:40:23 UTC 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
0598ca4
Fri Apr  8 15:43:37 UTC 2022: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
b074a79
Fri Apr  8 15:45:20 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
39ef261
Fri Apr  8 15:46:42 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
435f9bc
Fri Apr  8 15:55:29 UTC 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4f41eb4
Fri Apr  8 15:56:36 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
0cbb1e2
Fri Apr  8 15:59:28 UTC 2022: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  4|5
total_score: 20/70
94ea2ff
Fri Apr  8 16:00:14 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
f8c71f1
Fri Apr  8 16:10:40 UTC 2022: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
6619f35
Fri Apr  8 16:12:29 UTC 2022: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  4|5
total_score: 20/70
a6925ef
Fri Apr  8 16:12:43 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
28e1020
do., 10 de abr. de 2022 23:46:41: 
 hashmap.c | 42 +++++++++++++++++++++++++++++++-----------
 1 file changed, 31 insertions(+), 11 deletions(-)
 tests:  12|2
total_score: 50/70
de39c71
do., 10 de abr. de 2022 23:50:56: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:116:12: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if(aux =!NULL){return aux;}
            ^
hashmap.c:116:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(aux =!NULL){return aux;}
     ^~
hashmap.c:118:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8f18209
